Bug 153244 - knotes crashes closing alarm dialog
Summary: knotes crashes closing alarm dialog
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 167670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-01 22:06 UTC by FiNeX
Modified: 2008-12-15 22:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-12-01 22:06:41 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Step to reproduce the crash:
1. set an alarm
2. close the note
3. wait...
4. wait...
5. alarm dialog appears
6. close the dialog
7. knotes is crashed

This is the log:

knotes(24992)/kdeui (KNotification) KNotification::slotReceivedIdError: Error while contacting notify deamon "The name org.kde.knotify was not provided by any .service files"
knotes(24992)/kdeui (KNotification) KNotification::~KNotification: 0
knotes(24992)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig: KCoreConfigSkeleton::writeConfig()
knotes(24992)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::readConfig: KCoreConfigSkeleton::readConfig()
knotes(24992)/kresources KRES::ManagerImpl::~ManagerImpl: ManagerImpl::~ManagerImpl()
Comment 1 FiNeX 2007-12-31 13:54:32 UTC
Actually knotes is still crashing but I've this error on the shell output.
Task added, isActive =  false
knotify(3469) KNotify::event: 10  ref= 0
knotes(16285)/kdeui (KNotification) KNotification::slotReceivedId: 0
knotes(16285)/kdeui (KNotification) KNotification::~KNotification: 0
knotes(16285)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig: KCoreConfigSkeleton::writeConfig()
knotes(16285)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::readConfig: KCoreConfigSkeleton::readConfig()
knotes(16285)/kresources KRES::ManagerImpl::~ManagerImpl: ManagerImpl::~ManagerImpl()
Comment 2 Sergio Martins 2008-12-15 21:54:18 UTC
SVN commit 897363 by smartins:

Don't let knotes exit when the last window is closed. It should stay in the systray.

BUG: 153244


 M  +2 -2      knotesapp.cpp  
 M  +0 -1      main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=897363
Comment 3 Sergio Martins 2008-12-15 22:08:07 UTC
*** Bug 167670 has been marked as a duplicate of this bug. ***