Don't let knotes exit when the last window is closed. It should stay in the systray.

BUG: 153244

svn path=/trunk/KDE/kdepim/knotes/; revision=897363